// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb [common] example testing should match snapshot(s) for 1.basic 1`] = `
<nav
  className="lucid-Breadcrumb"
>
  <ul
    className="lucid-Breadcrumb-List"
  >
    <li
      className="lucid-Breadcrumb-Item"
      key=".$home"
    >
      <a
        href="#"
      >
        Start
      </a>
      <span
        className="lucid-Breadcrumb-BreadcrumbSeparator"
      >
        <span />
        <span />
      </span>
    </li>
    <li
      className="lucid-Breadcrumb-Item"
      key=".$list"
    >
      <a
        href="#"
      >
        List
      </a>
      <span
        className="lucid-Breadcrumb-BreadcrumbSeparator"
      >
        <span />
        <span />
      </span>
    </li>
    <li
      className="lucid-Breadcrumb-Item"
      key=".$item"
    >
      <a
        href="#"
      >
        Item
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Breadcrumb [common] example testing should match snapshot(s) for 2.rich 1`] = `
<nav
  className="lucid-Breadcrumb"
>
  <ul
    className="lucid-Breadcrumb-List"
  >
    <li
      className="lucid-Breadcrumb-Item"
      key=".$home"
    >
      <a
        href="#"
      >
        <NotchedTag
          size="small"
          tagStyle="style-two"
          type="stroke"
        >
          IO
        </NotchedTag>
        <span>
          <span>
            Foo
          </span>
          <span
            style={
              Object {
                "fontWeight": 400,
              }
            }
          >
             (1234)
          </span>
        </span>
      </a>
      <span
        className="lucid-Breadcrumb-BreadcrumbSeparator"
      >
        <span />
        <span />
      </span>
    </li>
    <li
      className="lucid-Breadcrumb-Item"
      key=".$list"
    >
      <a
        href="#"
      >
        <NotchedTag
          size="small"
          tagStyle="style-three"
          type="filled"
        >
          LI
        </NotchedTag>
        <span>
          <span>
            Bar
          </span>
          <span
            style={
              Object {
                "fontWeight": 400,
              }
            }
          >
             (1234)
          </span>
        </span>
      </a>
    </li>
  </ul>
</nav>
`;
